# Instruction-Learning

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  homework.md  instruction_learning.md  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: base.yaml
configs/embedding_model/: qwen3.yaml
configs/inference/: base.yaml
configs/instructions/: topic.yaml
configs/logging/: base.yaml
configs/model/: linear.yaml
configs/training/: base.yaml
src/instruction_learning/: __init__.py  cli.py  train.py
src/instruction_learning/data/: __init__.py  datamodule.py  download.py
src/instruction_learning/models/: __init__.py  linear_adapter.py
src/instruction_learning/pipelines/: __init__.py  csv_infer.py  nyt_preprocess.py
