[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "instruction-learning"
version = "0.1.0"
description = "Lightweight instruction-following embedding adaptor."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kirill Borodin" }]
dependencies = [
  "torch>=2.5.0,<3.0",
  "lightning>=2.4.0,<3.0",
  "hydra-core>=1.3.2",
  "mlflow>=2.16",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "dvc>=3.50",
  "fire>=0.6",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "rich>=13.9",
]

[project.optional-dependencies]
dev = ["black>=24.4", "isort>=5.13", "flake8>=7.1", "pre-commit>=4.0", "pytest>=8.3"]
